# compactly

./: .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZING.md  README.md  bench-quiet.sh  diff-bench.sh
.cargo/: config.toml
.github/workflows/: claude-review.yml  rust.yml
benches/: atmost.rs  bench.rs  bytes.rs  integers.rs  signed.rs
compactly-derive/: Cargo.toml
compactly-derive/src/: ans.rs  lib.rs  v0.rs  v1.rs  v2.rs
comparison/: Cargo.toml
comparison/benches/: ans.rs  bench.rs
comparison/src/: books.rs  dictionary.rs  en-ar-dictionary.tsv  lib.rs  magic.rs  meteorites.csv  meteorites.rs  suicide.csv  suicide.rs  ten.json  three-kingdoms.txt
examples/: bit-context.rs
plans/: streaming-io-api.md
src/: adapt.rs  arith.rs  array.rs  bit_context.rs  bits.rs  bools.rs  byte.rs  encoded.rs  floats.rs  ints.rs  lib.rs  low_cardinality.rs  maps.rs  option.rs  sets.rs  string.rs  string_set.rs  tuples.rs  urange.rs  usizes.rs  vecs.rs
src/ans/: adapt.rs  ans.rs  arc.rs  arith.rs  array.rs  bit-context.sh  bit_context.rs  bits.rs  bools.rs  byte.rs  bytes.rs  floats.rs  generate_bit_context.rs  ints.rs  low_cardinality.rs  maps.rs  mod.rs  option.rs  other_crate_types.rs  raw.rs  sets.rs  string.rs  tuples.rs  ulessthan.rs  usizes.rs  vecs.rs
src/ans/ans/: bytes.rs  probability.rs
src/string_set/: treap.rs
src/v0/: adapt.rs  arith.rs  array.rs  bits.rs  bools.rs  byte.rs  encoded.rs  floats.rs  ints.rs  low_cardinality.rs  maps.rs  mod.rs  option.rs  sets.rs  string.rs  tuples.rs  urange.rs  usizes.rs  vecs.rs
src/v1/: adapt.rs  arc.rs  arith.rs  array.rs  bit-contest.sh  bit-context.sh  bit_context.rs  bits.rs  bools.rs  byte.rs  bytes.rs  correlated.rs  floats.rs  generate_bit_context.rs  ints.rs  low_cardinality.rs  maps.rs  markers.rs  mod.rs  option.rs  sets.rs  string.rs  tuples.rs  ulessthan.rs  urange.rs  usizes.rs  vecs.rs
src/v2/: afewbits.rs  ans.rs  arc.rs  arith.rs  atmost.rs  bit-context.sh  bit_context.rs  bits.rs  bools.rs  byte.rs  bytes.rs  char_init.rs  floats.rs  generate_bit_context.rs  ints.rs  low_cardinality.rs  maps.rs  markers.rs  millibits.rs  mod.rs  model.rs  net.rs  nonzero.rs  option.rs  raw.rs  sets.rs  string.rs  symbol.rs  tuples.rs  ulessthan.rs  usizes.rs  vecs.rs
src/v2/ans/: probability.rs
src/v2/atmost/: geometric.rs  mod.rs  walks.rs
src/v2/bytes/: buffer.rs
src/v2/string/: init.rs
src/v2/ulessthan/: char_init.rs
tests/: derive.rs  v1-encoding.rs
tests/v1-encoding/: 24ab6fd156447157  3465ca27a389c3e3  5a3abdc7cc30151a  620a40e068ffb71a  65e00400766953a4  6c77d8af89ab5ab5  7241c4e09af72b43  7f077bb3b56e6266  89a02d3d47e30a40  8f07dcb355d0ca1a  9629e1b120ae5b89  String-9139fcad9a279c08  Vec-v1_encoding__floats__F64--25b69199e61e8643  Vec-v1_encoding__unsigned__Unsigned--92c004f084d2bd87  a9953ae6a372d868  ab2366856a691d49  ab8d0e16acee2e63  af2dd1eb8e70b5b7  alloc::collections::btree::set::BTreeSet<u16>-8ffc621289480190  alloc::vec::Vec<u64>-f56de0d415f8985d  alloc::vec::Vec<v1_encoding::floats::F32>-92132075f86aca20  alloc::vec::Vec<v1_encoding::floats::F64>-659ba626ad0171a9  arc_bytes-6a883e5474dbb95c  bytes_collections-16e67d9ad02f3daa  bytes_collections-18386f9420a5515d  bytes_collections-2b2d9bc581e9f23b  bytes_collections-7f077bb3b56e6266  bytes_collections-9629e1b120ae5b89  bytes_collections-df5ed83d0b64c8bb  bytes_collections-e3342b35c2681717  bytes_collections-fa7b59680444d63b  c726592966ce1884  d89ecc7ffef9fda1  e51350157be2950c  ed81e5f2b77923b8  f1a055de82442dc5  floats-006d02a80f40001c  floats-05faf98033a07842  floats-3406c3febee06fa4  floats-41724e1575898ea4  (+58 more)
