[package]
name = "compactly"
version = "0.1.0"
edition = "2021"
description = "Compactly encode data types using adaptive arithmetic coding"
license = "MIT OR Apache-2.0"
authors = ["David Roundy <daveroundy@gmail.com>"]

[workspace.dependencies]
cabac =  { git = "https://github.com/droundy/cabac" }

[dependencies]

cabac.workspace = true
compactly-derive = { path = "compactly-derive" }

[dev-dependencies]

scaling = "0.1.3"
stats_alloc = "0.1.10"
rand = { version = "0.8.5", features = ["small_rng"] }

bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13.2"

[workspace]

members = [
    "compactly-derive",
    "comparison"
]

[[bench]]
name = "bench"
harness = false


