[package]
name = "compactly"
version = "0.1.7"
edition = "2021"
description = "Compactly encode data types using adaptive arithmetic coding"
license = "MIT OR Apache-2.0"
authors = ["David Roundy <daveroundy@gmail.com>"]
readme = "README.md"

[features]

generate_bit_context = []
v1 = []
v2 = []
default = ["v1", "v2"]

[dependencies]

compactly-derive = { version = "0.1.7", path = "compactly-derive" }

nonmax = { version = "0.5.5", optional = true }
uuid = { version = "1.18.1", optional = true }

[dev-dependencies]

scaling = "0.1.3"
stats_alloc = "0.1.10"
rand = { version = "0.8.5", features = ["small_rng"] }

bincode = "2.0.1"
bincode1 = { version = "1.3.3", package = "bincode" }
serde = { version = "1.0", features = ["derive", "rc"] }
zstd = "0.13.2"
rapidhash = "1.4.0"
bitcode = "0.6.9"

[profile.bench]
debug = true

[workspace]

members = [
    "compactly-derive",
    "comparison"
]

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "integers"
harness = false

[[bench]]
name = "signed"
harness = false

[[bench]]
name = "bytes"
harness = false

# These binaries use the v2 API, so they cannot build without it.
[[bin]]
name = "just-compress"
required-features = ["v2"]

[[bin]]
name = "just-decompress"
required-features = ["v2"]

[[bin]]
name = "just-decompress-floats"
required-features = ["v2"]

[[bin]]
name = "just-decompress-net"
required-features = ["v2"]

[[bin]]
name = "just-decompress-strings"
required-features = ["v2"]

[[bin]]
name = "micro-batch"
required-features = ["v2"]

