[package]
name = "compactly-derive"
version = "0.1.2"
edition = "2021"
description = "Derive macros for compactly crate"
license = "MIT OR Apache-2.0"
authors = ["David Roundy <daveroundy@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13.1"
quote = "1.0.38"
proc-macro2 = "1.0.92"
syn = "2.0.96"

[dev-dependencies]
compactly = { path = ".." }
