[package]
name = "compactly-derive"
version = "0.1.7"
edition = "2021"
description = "Derive macros for compactly crate"
license = "MIT OR Apache-2.0"
authors = ["David Roundy <daveroundy@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13.1"
quote = "1.0.38"
proc-macro2 = "1.0.92"
syn = "2.0.96"
proc-macro-warning = { version = "1.84.1", default-features = false }

[dev-dependencies]
compactly = { path = ".." }
prettyplease = "0.2.37"
expect-test = "1.5.1"
