[package]
name = "comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
compactly = { path = ".." }
serde_json = "1.0.138"

[dev-dependencies]

scaling = "0.1.3"
bincode = "1.3.3"
zstd = "0.13.2"

[[bench]]
name = "bench"
harness = false
